--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "eslint": "6.1.0",
     "eslint-config-htmlacademy": "0.5.2",
     "webpack": "4.39.2",
-    "webpack-cli": "^3.3.6",
+    "webpack-cli": "3.3.6",
     "webpack-dev-server": "3.8.0"
   },
   "engines": {
